--- a/src/pages/Workshop/layouts/LeftSidebar/LeftSidebar.scss
+++ b/src/pages/Workshop/layouts/LeftSidebar/LeftSidebar.scss
@@ -2,11 +2,11 @@
 @import "../../../../assets/vendor/bootstrap/variables";
 @import "../../../../assets/vendor/bootstrap/mixins/breakpoints";
 
-.meeting-left-sidebar-container {
+.workshop-left-sidebar-container {
   min-width: 1000px;
 }
 
-.meeting-logo {
+.workshop-logo {
   display: block;
   width: 100%;
   max-width: 10rem;
@@ -14,7 +14,7 @@
   margin-left: 3rem;
 }
 
-.meeting-left-sidebar-bottom {
+.workshop-left-sidebar-bottom {
   border-right: $gray-300 1px solid;
   width: 100%;
   padding: 3rem;
