--- a/src/pages/Workshop/stages/Solutions/steps/ImpactEffort/ImpactEffort.scss
+++ b/src/pages/Workshop/stages/Solutions/steps/ImpactEffort/ImpactEffort.scss
@@ -63,8 +63,13 @@
   }
 }
 
-.ie-item {
+.ie-item-container {
   position: relative;
+  width: 30px;
+  height: 30px;
+}
+
+.ie-item {
   width: 30px;
   height: 30px;
   background-color: $red;
@@ -74,17 +79,18 @@
   line-height: 30px;
   cursor: pointer;
   z-index: 2;
+}
 
-  .ie-content {
-    position: absolute;
-    top: 50%;
-    left: calc(100% + 1rem);
-    background-color: $primary;
-    transform: translate(0, -50%);
-    min-width: 50rem;
-    text-align: left;
-    padding: 1rem;
-    border-radius: 1rem;
-    z-index: 2;
-  }
+.ie-content {
+  position: absolute;
+  top: 50%;
+  left: calc(100% + 1rem);
+  background-color: $primary;
+  transform: translate(0, -50%);
+  min-width: 50rem;
+  text-align: left;
+  padding: 1rem;
+  border-radius: 1rem;
+  z-index: 2;
+  color: $white;
 }
