--- a/src/pages/Workshop/stages/Solutions/steps/ImpactEffort/ImpactEffort.scss
+++ b/src/pages/Workshop/stages/Solutions/steps/ImpactEffort/ImpactEffort.scss
@@ -49,17 +49,18 @@
   flex-shrink: 1;
   flex-grow: 1;
   flex-basis: 50%;
-  background-color: $yellow;
+  background-color: lighten($yellow, 20);
   text-align: center;
-  font-size: 4rem;
   height: 300px;
-  opacity: .26;
+  color: $gray-500;
 
   span {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 0;
+    font-size: 4rem;
   }
 }
 
