Rename to past workshops

--- a/src/pages/PastWorkshops/PastWorkshops.scss
+++ b/src/pages/PastWorkshops/PastWorkshops.scss
@@ -1,7 +1,7 @@
 @import "assets/vendor/bootstrap/_functions";
 @import "assets/vendor/bootstrap/_variables";
 
-.all-workshops-links {
+.past-workshops-links {
   padding: 1rem;
   padding-left: 0;
   color: $dark;
