RACI matrix layout and delete functionality

--- a/src/pages/Workshop/stages/Experiments/steps/Owners/RaciMatrix.scss
+++ b/src/pages/Workshop/stages/Experiments/steps/Owners/RaciMatrix.scss
@@ -59,3 +59,11 @@
 .raci-toggle-right {
   right: -2rem;
 }
+
+.delete-row-button {
+  position: absolute;
+  top: 50%;
+  right: calc(100% + 1rem);
+  transform: translate(0, -50%);
+  cursor: pointer;
+}
