--- a/src/pages/Workshop/stages/Solutions/steps/ImpactEffort/ImpactEffort.scss
+++ b/src/pages/Workshop/stages/Solutions/steps/ImpactEffort/ImpactEffort.scss
@@ -6,41 +6,32 @@
 
   .left-handle {
     position: absolute;
-    top: calc(100% + 1rem);
+    top: calc(100% + 3.5rem);
     left: 0;
   }
 
   .right-handle {
     position: absolute;
-    top: calc(100% + 1rem);
+    top: calc(100% + 3.5rem);
     right: 0;
   }
 }
 
 .ie-slider {
-  display: block;
-  width: 100%;
   height: 2px;
-  -webkit-appearance: none;
-  border-radius: 5px;  
-  background: $gray-500;
-  outline: none;
-}
 
-.ie-slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%; 
-  background: $primary;
-  cursor: pointer;
-}
+  .rangeslider__handle {
+    background-color: $primary;
+    box-shadow: none;
+    width: 20px;
+    height: 20px;
 
-.ie-slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: #4CAF50;
-  cursor: pointer;
+    &:after {
+      display: none !important;
+    }
+  }
+
+  .rangeslider__fill {
+    background-color: $primary;
+  }
 }
