--- a/src/pages/CreateWorkshop/CreateWorkshop.scss
+++ b/src/pages/CreateWorkshop/CreateWorkshop.scss
@@ -9,3 +9,17 @@
   border-bottom: $black 2px solid;
   border-left: $gray-400 1px solid;
 }
+
+.create-workshop-step-overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $secondary;
+  z-index: $zindex-sticky;
+  border-radius: $border-radius;
+}
