--- a/src/pages/CreateWorkshop/CreateWorkshop.scss
+++ b/src/pages/CreateWorkshop/CreateWorkshop.scss
@@ -23,3 +23,16 @@
   z-index: $zindex-sticky;
   border-radius: $border-radius;
 }
+
+.create-workshop-removable-input {
+  position: relative;
+
+  i.remove-toggle {
+    position: absolute;
+    top: calc(50% - 15px);
+    left: -22px;
+    transform: translate(0, -50%);
+    cursor: pointer;
+    color: $pink;
+  }
+}
